; ModuleID = '/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_draw_quad.c'
source_filename = "/home/carl/AnghaBench/RetroArch/menu/extr_menu_driver.c_menu_display_draw_quad.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 (i32*)*, i32 (i32*)* }
%struct.TYPE_6__ = type { i32, i32, i32, i32, float, float, %struct.TYPE_5__, i32, i32, i32*, %struct.video_coords* }
%struct.TYPE_5__ = type { i64 }
%struct.video_coords = type { i32, float*, i32*, i32*, i32* }

@menu_disp = common dso_local global %struct.TYPE_7__* null, align 8
@menu_display_white_texture = common dso_local global i32 0, align 4
@MENU_DISPLAY_PRIM_TRIANGLESTRIP = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @menu_display_draw_quad(i32* %0, i32 %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6, float* %7) #0 {
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca float*, align 8
  %17 = alloca %struct.TYPE_6__, align 8
  %18 = alloca %struct.video_coords, align 8
  store i32* %0, i32** %9, align 8
  store i32 %1, i32* %10, align 4
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  store float* %7, float** %16, align 8
  %19 = getelementptr inbounds %struct.video_coords, %struct.video_coords* %18, i32 0, i32 0
  store i32 4, i32* %19, align 8
  %20 = getelementptr inbounds %struct.video_coords, %struct.video_coords* %18, i32 0, i32 4
  store i32* null, i32** %20, align 8
  %21 = getelementptr inbounds %struct.video_coords, %struct.video_coords* %18, i32 0, i32 3
  store i32* null, i32** %21, align 8
  %22 = getelementptr inbounds %struct.video_coords, %struct.video_coords* %18, i32 0, i32 2
  store i32* null, i32** %22, align 8
  %23 = load float*, float** %16, align 8
  %24 = getelementptr inbounds %struct.video_coords, %struct.video_coords* %18, i32 0, i32 1
  store float* %23, float** %24, align 8
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %26 = icmp ne %struct.TYPE_7__* %25, null
  br i1 %26, label %27, label %38

27:                                               ; preds = %8
  %28 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %29 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %28, i32 0, i32 1
  %30 = load i32 (i32*)*, i32 (i32*)** %29, align 8
  %31 = icmp ne i32 (i32*)* %30, null
  br i1 %31, label %32, label %38

32:                                               ; preds = %27
  %33 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %34 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %33, i32 0, i32 1
  %35 = load i32 (i32*)*, i32 (i32*)** %34, align 8
  %36 = load i32*, i32** %9, align 8
  %37 = call i32 %35(i32* %36)
  br label %38

38:                                               ; preds = %32, %27, %8
  %39 = load i32, i32* %10, align 4
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 0
  store i32 %39, i32* %40, align 8
  %41 = load i32, i32* %15, align 4
  %42 = load i32, i32* %11, align 4
  %43 = sub nsw i32 %41, %42
  %44 = load i32, i32* %13, align 4
  %45 = sub nsw i32 %43, %44
  %46 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 1
  store i32 %45, i32* %46, align 4
  %47 = load i32, i32* %12, align 4
  %48 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 2
  store i32 %47, i32* %48, align 8
  %49 = load i32, i32* %13, align 4
  %50 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 3
  store i32 %49, i32* %50, align 4
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 10
  store %struct.video_coords* %18, %struct.video_coords** %51, align 8
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 9
  store i32* null, i32** %52, align 8
  %53 = load i32, i32* @menu_display_white_texture, align 4
  %54 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 8
  store i32 %53, i32* %54, align 4
  %55 = load i32, i32* @MENU_DISPLAY_PRIM_TRIANGLESTRIP, align 4
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 7
  store i32 %55, i32* %56, align 8
  %57 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 6
  %58 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %57, i32 0, i32 0
  store i64 0, i64* %58, align 8
  %59 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 4
  store float 1.000000e+00, float* %59, align 8
  %60 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %17, i32 0, i32 5
  store float 0.000000e+00, float* %60, align 4
  %61 = load i32*, i32** %9, align 8
  %62 = call i32 @menu_display_draw(%struct.TYPE_6__* %17, i32* %61)
  %63 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %64 = icmp ne %struct.TYPE_7__* %63, null
  br i1 %64, label %65, label %76

65:                                               ; preds = %38
  %66 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %67 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %66, i32 0, i32 0
  %68 = load i32 (i32*)*, i32 (i32*)** %67, align 8
  %69 = icmp ne i32 (i32*)* %68, null
  br i1 %69, label %70, label %76

70:                                               ; preds = %65
  %71 = load %struct.TYPE_7__*, %struct.TYPE_7__** @menu_disp, align 8
  %72 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %71, i32 0, i32 0
  %73 = load i32 (i32*)*, i32 (i32*)** %72, align 8
  %74 = load i32*, i32** %9, align 8
  %75 = call i32 %73(i32* %74)
  br label %76

76:                                               ; preds = %70, %65, %38
  ret void
}

declare dso_local i32 @menu_display_draw(%struct.TYPE_6__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
